Bug 1711064 - patch 1 - Add a pref to control whether linkifying Save-as-PDF output is enabled. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D115514